[package]
name = "tetrisclone"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_core_pipeline",
    "bevy_text",
    "bevy_asset",
    "default_font",
    "x11",
] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
embed-resource = "2.5"
